Fix some performance inefficiencies
Signed-off-by: PranavPurwar <purwarpranav80@gmail.com>